# inertial-navigation-system

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  launch.json  orientation  png  positionWGS  test
blockProgram/: magnetometer.slx  magnetometer.slx.autosave
config/: indexDataConfig
inc/: typesData.hpp
include/: ahrs.hpp  applicationStart.hpp  calcProbabilityCharact.hpp  convert.hpp  coordinateTransform.hpp  draw.hpp  estimatePositionWGS.hpp  filters.hpp  gravitationalAccelerationCalc.hpp  initParams.hpp  initialExhibition.hpp  inputData.hpp  lowPassFilter.hpp  math.hpp  readConfigFile.hpp  readFile.hpp  rotationMatrix.hpp  typesData.hpp  writeToFile.hpp
projectDescription/: systemDiagram.drawio
resource/: .~lock.GNSSup_1.csv#  .~lock.InitCondition1.csv#  .~lock.Move(orientation_30, 6 meters).csv#  .~lock.RotationZ_360.csv#  .~lock.angleMagnetometer360_2.csv#  .~lock.angleMagnetometer360_2_plot.csv#  .~lock.carExhibition_60kmh.csv#  .~lock.initCondition.csv#  .~lock.initCondition2.csv#  .~lock.initGNSSup_1.csv#  .~lock.move(stability).csv#  .~lock.music.csv#  .~lock.musicGlobalCoordinate.csv#  .~lock.orientation360_2_chear (useful data).csv#  .~lock.orientation360_2_chear.csv#  .~lock.sensor_record.csv#  .~lock.testMagnetometerExhibition.csv#  .~lock.yawNonStabelSpeed.csv#  Car_41Km.h.txt  Car_47Km.h copy.txt  Car_7Km.h.txt  GNSS_0.csv  GNSS_1.csv  GNSS_2.csv  GNSSup_0.csv  GNSSup_1.csv  GNSSup_2.csv  InitCondition1.csv  Move(orientation_30, 6 meters).csv  RotationX_360.csv  RotationY_360.csv  RotationZ_360.csv  RotationZ_3x360.csv  (+54 more)
(+62 files in other folders)
